Fix key map loading and editor display

--- a/ronald-egui/index.html
+++ b/ronald-egui/index.html
@@ -23,6 +23,7 @@
     <link data-trunk rel="copy-file" href="assets/icon-256.png" data-target-path="assets"/>
     <link data-trunk rel="copy-file" href="assets/icon_ios_touch_192.png" data-target-path="assets"/>
     <link data-trunk rel="copy-file" href="assets/maskable_icon_x512.png" data-target-path="assets"/>
+    <link data-trunk rel="copy-file" href="keymap.default.json"/>
 
 
     <link rel="manifest" href="manifest.json">
